Fixed delete and decimal operations

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ body{
     padding: 2%;
     word-wrap: break-word;
     word-break: break-all;
+    min-height: 6.5em;
 }
 
 .output .previous-operand{
